# vision.cpp

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  pkg-check.yml
bindings/python/visioncpp/: __init__.py  _lib.py  vision.py
depend/stb/: CMakeLists.txt
include/visp/: ml.h  vision.h
models/: CMakeLists.txt
scripts/: convert.py
scripts/cmake/: visioncpp-config.cmake.in
scripts/pkg-check/: CMakeLists.txt  check-package.sh  main.cpp
src/cli/: CMakeLists.txt  cli.cpp
src/visp/: CMakeLists.txt  c-api.cpp  ml.cpp  nn.cpp  nn.h  vision.cpp
src/visp/arch/: birefnet.cpp  depth-anything.h  dino.cpp  dino.h  mobile-sam.cpp  mobile-sam.h  swin.cpp
tests/: CMakeLists.txt  benchmark.cpp  conftest.py  test-ml.cpp  test_birefnet.py  test_mobile_sam.py  test_primitives.py  test_python_bindings.py  testing.cpp  workbench.cpp  workbench.py
