[project]
dynamic = ["version"]
name = "vision.cpp"
requires-python = ">=3.12"
dependencies = [
    "pillow",
]

[dependency-groups]
dev = [
    "torch",
    "torchvision",
    "timm",
    "pytest",
    "opencv-python",
    "ruff",
    "einops>=0.8.1",
    "spandrel>=0.4.1",
    "gguf>=0.17.1",
    "boto3~=1.39.0"
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
preview = true

[tool.ruff.lint]
ignore = ["E741"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
